@@ -313,15 +313,14 @@
                 placement :
                 $.OverlayPlacement.TOP_LEFT;
         },
+
         /**
          * @function
          * @returns {OpenSeadragon.Rect} overlay bounds
          */
         getBounds: function() {
-
             return this.bounds.clone();
         }
-
     };
 
 }( OpenSeadragon ));
